--- a/SanJuanSaludAPP/www/ayudaCSDepartamentos.html
+++ b/SanJuanSaludAPP/www/ayudaCSDepartamentos.html
@@ -14,14 +14,23 @@
     </div>
 
     <div class="pages">
-        <br>
-        <br>
-        <div class="content-block">
+        <div class="page-content">
+            <br>
+            <br>
+            <div class="content-block">
 
-            <h3>Buscar por departamento</h3>
+                <h3>Buscar por departamento</h3>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi nihil quia quibusdam sed totam ut? Accusantium adipisci cumque dolorem minima pariatur perspiciatis quas! Ad expedita laboriosam perferendis quo, sint ullam!</p>
-
+                <p>Si usted presiona el botón <i>"Centros de Salud"</i> tiene como opción <i>"Buscar por departamento".</i></p>
+                <p>Al seleccionarlo usted tendrá todos los departamentos que tienen información de sus centros de salud divididos por zonas sanitarias.</p>
+                <p>Elija el departamento y luego el centro de salud del cual necesita información.</p>
+                <p>En la información detallada usted encontrará la información dividida en tres partes importantes:</p>
+                <p><b>Información del centro de salud:</b> Nombre, teléfono, dirección y líneas de colectivos que llegan hasta ahí.</p>
+                <p><b>Especialidades y horarios:</b> Si está disponible, se muestran las distintas especialidades y al tocar alguna, se despliega una lista con los días y horarios de atención.</p>
+                <p><b>Geolocalización:</b> Muestra la distancia hasta el centro de salud, el mapa con una sugerencia de ruta para llegar y si acciona el botón rotulado <i>"indicaciones para llegar"</i> se inicia la aplicación de navegación por defecto de su dispositivo.</p>
+                <br>
+                <br>
+            </div>
         </div>
     </div>
 </div>
