--- a/SanJuanSaludAPP/www/ayudaCSProtur.html
+++ b/SanJuanSaludAPP/www/ayudaCSProtur.html
@@ -14,14 +14,29 @@
     </div>
 
     <div class="pages">
-        <br>
-        <br>
-        <div class="content-block">
+        <div class="page-content">
+            <br>
+            <br>
+            <div class="content-block">
 
-            <h3>Contactar con un PROTUR</h3>
+                <h3>Contactar con un PROTUR</h3>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi nihil quia quibusdam sed totam ut? Accusantium adipisci cumque dolorem minima pariatur perspiciatis quas! Ad expedita laboriosam perferendis quo, sint ullam!</p>
-
+                <p>PROTUR (sistema de turnos médicos programados) es un programa cuyo objetivo es agilizar el proceso para solicitar un turno en un centro de salud.</p>
+                <p>Es necesario destacar que al enviar una solicitud de contacto mediante ésta aplicación o por <a class="link-azul" href="http://salud.sanjuan.gob.ar"> la página web del Ministerio de Salud</a>, usted no pide un turno directamente, sino que <b>una persona se contacta con usted por mail o teléfono</b> para coordinar un turno en el horario y centro de salud mas adecuado para usted.</p>
+                <p>Si necesita turno para un especialista, debe de tener la derivación que le proporcionó su médico. Si no posee derivación, el PROTUR que se contacte con usted le dará un turno para el médico clínico mas conveniente según su ubicación.</p>
+                <p>El formulario tiene para llenar los siguientes campos:</p>
+                <p><b>Nombre y Apellido:</b>(obligatorio) Debe ingresar su nombre y apellido. No está permitido ingresar números acá.</p>
+                <p><b>Correo electrónico:</b> Para tener mas opciones de contacto es recomendable facilitar su dirección de casilla electrónica <i>( nombre@proveedor.com )</i></p>
+                <p><b>Teléfono:</b>(obligatorio) Es necesario informar un número de teléfono por el cual el programador de turnos se comunicará con usted.</p>
+                <p><b>Otro teléfono:</b> No es obligatorio escribir mas de un teléfono, pero es recomendable hacerlo por si ocurre algún problema y no se puede comunicar el programador.</p>
+                <p><b>Departamento:</b>(obligatorio) Al tocar en esta opción, se mostrará una lista desplegable con los departamentos de San Juan. Seleccione su departamento o si tiene alguna duda, deje la opción por defecto <i>("otro").</i></p>
+                <p><b>Dirección:</b> Escriba su dirección, sin omitir barrio o localidad para que el programador pueda ser mas preciso al otorgarle el turno que mas se ajuste a sus necesidades.</p>
+                <p><b>Comentarios:</b> Este es un campo libre donde usted puede ingresar cualquier detalle que crea relevante para su mejor atención. <i>(si tiene derivación, el especialista que necesita, los horarios que tiene disponible, etc.)</i></p>
+                <p>Al ingresar todos sus datos, le aparecerá un cuadro de confirmación y al aceptar la solicitud será enviada. <b>El programador puede llegar a demorar unos días en comunicarse con usted,</b> por favor sea paciente.</p>
+                <p>En caso de no enviar la solicitud se mostrará un cartel diciendo <i>"Intente nuevamente mas tarde"</i> en caso que todo salga bien, se muestra un número identificador único de su solicitud. Usted puede conservar ese número para referencias en caso que se produzca algún error.</p>
+                <br>
+                <br>
+            </div>
         </div>
     </div>
 </div>
