--- a/SanJuanSaludAPP/www/formularioProtur.html
+++ b/SanJuanSaludAPP/www/formularioProtur.html
@@ -19,7 +19,7 @@
 
         <div class="content-block">
             <br>
-            <form class="list-block inset background-light" id="proturForm" name="proturForm">
+            <form class="list-block background-light" id="proturForm" name="proturForm">
 
 
                             <div class="item-content">
@@ -33,7 +33,7 @@
                             </div>
 
                             <div class="item-content">
-                                <div class="item-media"><i class="icon f7-icons  color-red">email</i></div>
+                                <div class="item-media"><i class="icon f7-icons  color-red">email_fill</i></div>
                                 <div class="item-inner">
                                     <div class="item-input">
                                         <input id="mail" type="email" placeholder="Correo electrónico">
