--- a/SanJuanSaludAPP/www/ayudaContacto.html
+++ b/SanJuanSaludAPP/www/ayudaContacto.html
@@ -16,12 +16,27 @@
     <div class="pages">
         <br>
         <br>
-        <div class="content-block">
+        <div class="page-content">
+            <div class="content-block">
 
-            <h3>Envianos tu comentario</h3>
+                <h3>Envianos tu comentario</h3>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi nihil quia quibusdam sed totam ut? Accusantium adipisci cumque dolorem minima pariatur perspiciatis quas! Ad expedita laboriosam perferendis quo, sint ullam!</p>
+                <p>Ésta aplicación fue desarrollada por el <b>Área de informática del Ministerio de Salud de San Juan </b> en colaboración con la
+                    <a class="link-azul" href="http://tramite.sanjuan.gov.ar/index.php/tramite/org/266">Dirección de Gobierno Electrónico</a> (organismo encargado de coordinar la informática en todos los ministerios) la
+                    <a class="link-azul" href="http://tramite.sanjuan.gov.ar/index.php/tramite/org/349">Dirección de Asistencia Social</a> (a cargo del programa PROTUR) y el
+                    <a class="link-azul" href="mailto:iiee_informes@sanjuan.gov.ar">Dirección de Estadística</a> (quien recopila los datos de los centros de salud). </p>
+                <p>Cualquier duda o sugerencia, usted puede escribirnos en el siguiente cuadro:</p>
 
+                    <textarea id="textareaComentario" maxlength="254" type="text" rows="5" placeholder="Escriba aquí su comentario"></textarea>
+                <div class="content block">
+                    <a href="#" onclick="javascript:enviarComentario();" id="enviarComentario" class="button button-fill button-raised boton-chico">Enviar comentario</a>
+                </div>
+
+
+
+
+
+            </div>
         </div>
     </div>
 </div>
