mejoras en vistas

--- a/SanJuanSaludAPP/www/ayudaCSDispositivo.html
+++ b/SanJuanSaludAPP/www/ayudaCSDispositivo.html
@@ -23,12 +23,13 @@
 
                 <p>Cuando selecciona <i>"Buscar centros de salud con mi dispositivo móvil"</i> la aplicación busca su ubicación actual con su GPS (si está disponible y activado) y le muestra los centros de salud mas cercanos a donde se encuentre.</p>
                 <p>Si el dispositivo mostró un mensaje diciendo <i>"No se pudo encontrar su ubicación"</i> entonces la aplicación no pudo tomar la información de su GPS. Por favor, actívelo y reinicie la aplicación.</p>
-                <p>Si todo salió correctamente, el mapa mostrará su ubicación actual con un ícono naranja y una indicación que dice <i>"Ubicación actual"</i>. Los centros de salud se muestran con un pin rojo y una cruz.</p>
+                <p>Si todo es correcto, el mapa mostrará su ubicación actual con un ícono naranja y una indicación que dice <i>"Ubicación actual"</i>. Los centros de salud se muestran con un pin rojo y una cruz.</p>
                 <p>Usted puede seleccionar estos pines (que representan los centros de salud) y se mostrará un cartel con el nombre del centro de salud y la opción de <i>"ver información detallada"</i>.</p>
-                <p>En la información detallada usted encontrará la información dividida en tres partes importantes:</p>
+                <p>En la información detallada usted encontrará la información en tres partes importantes:</p>
                 <p><b>Información del centro de salud:</b> Nombre, teléfono, dirección y líneas de colectivos que llegan hasta ahí.</p>
                 <p><b>Especialidades y horarios:</b> Si está disponible, se muestran las distintas especialidades y al tocar alguna, se despliega una lista con los días y horarios de atención.</p>
                 <p><b>Geolocalización:</b> Muestra la distancia hasta el centro de salud, el mapa con una sugerencia de ruta para llegar y si acciona el botón rotulado <i>"indicaciones para llegar"</i> se inicia la aplicación de navegación por defecto de su dispositivo.</p>
+                <br>
                 <br>
                 <br>
             </div>
