--- a/SanJuanSaludAPP/www/ayudaContacto.html
+++ b/SanJuanSaludAPP/www/ayudaContacto.html
@@ -25,8 +25,12 @@
                     <a class="link-azul" href="http://tramite.sanjuan.gov.ar/index.php/tramite/org/266">Dirección de Gobierno Electrónico</a> (organismo encargado de coordinar la informática en todos los ministerios) la
                     <a class="link-azul" href="http://tramite.sanjuan.gov.ar/index.php/tramite/org/349">Dirección de Asistencia Social</a> (a cargo del programa PROTUR) y el
                     <a class="link-azul" href="mailto:iiee_informes@sanjuan.gov.ar">Dirección de Estadística</a> (quien recopila los datos de los centros de salud). </p>
-                <p>Cualquier duda o sugerencia, usted puede escribirnos en el siguiente cuadro:</p>
+                <p>Cualquier duda o sugerencia, escríbanos:</p>
 
+                <div>
+                    <i class="icon f7-icons  color-red">email_fill</i>
+                    <input id="cemail" type="email" placeholder="Correo electrónico">
+                </div>
                     <textarea id="textareaComentario" maxlength="254" type="text" rows="5" placeholder="Escriba aquí su comentario"></textarea>
                 <div class="content block">
                     <a href="#" onclick="javascript:enviarComentario();" id="enviarComentario" class="button button-fill button-raised boton-chico">Enviar comentario</a>
