--- a/SanJuanSaludAPP/www/ayuda.html
+++ b/SanJuanSaludAPP/www/ayuda.html
@@ -20,17 +20,17 @@
         <div class="content-block">
 
             <h3>Temas de ayuda</h3>
-            <div class="linkAyuda" ><div class="icon f7-icons">help</div><a href="ayudaCSDispositivo.html" >Buscar centros de salud con tu dispositivo</a></div>
+            <div class="linkAyuda" ><div class="icon f7-icons color-red">help_fill</div><a href="ayudaCSDispositivo.html" >Buscar centros de salud con tu dispositivo</a></div>
             <br>
-            <div class="linkAyuda" ><div class="icon f7-icons">help</div><a href="ayudaCSDepartamentos.html">Buscar centros de salud por departamento</a></div>
+            <div class="linkAyuda" ><div class="icon f7-icons color-red">help_fill</div><a href="ayudaCSDepartamentos.html">Buscar centros de salud por departamento</a></div>
             <br>
-            <div class="linkAyuda" ><div class="icon f7-icons">help</div><a href="ayudaCSProtur.html">Solicitar contacto con un PROTUR</a></div>
+            <div class="linkAyuda" ><div class="icon f7-icons color-red">help_fill</div><a href="ayudaCSProtur.html">Solicitar contacto con un PROTUR</a></div>
             <br>
-            <div class="linkAyuda" ><div class="icon f7-icons">help</div><a href="ayudaContacto.html">¿Preguntas o sugerencias?</a></div>
+            <div class="linkAyuda" ><div class="icon f7-icons color-red">help_fill</div><a href="ayudaContacto.html">¿Preguntas o sugerencias?</a></div>
             <br>
-            <div class="linkAyuda color-indigo" ><div class="icon f7-icons">social_facebook_fill</div><a href="https://www.facebook.com/sharer/sharer.php?u=http%3A//salud.sanjuan.gob.ar/&quote='Estoy%20usando%20la%20app%20para%20buscar%20centros%20de%20salud%20y%20turnos%20en%20San%20Juan.%20%23encontraSalud%20%23programaTuTurno'" >Compartilo en Facebook</a></div>
+            <div class="linkAyuda  external color-indigo" ><div class="icon f7-icons">social_facebook_fill</div><a href="https://www.facebook.com/sharer/sharer.php?u=http%3A//salud.sanjuan.gob.ar/&quote='Estoy%20usando%20la%20app%20para%20buscar%20centros%20de%20salud%20y%20turnos%20en%20San%20Juan.%20%23encontraSalud%20%23programaTuTurno'" >Compartilo en Facebook</a></div>
             <br>
-            <div class="linkAyuda color-blue" ><div class="icon f7-icons">social_twitter_fill</div><a href="https://twitter.com/home?status=Estoy%20usando%20la%20app%20para%20buscar%20centros%20de%20salud%20y%20turnos%20en%20San%20Juan.%20%23encontraSalud%20%23programaTuTurno">Compartilo en Twitter</a></div>
+            <div class="linkAyuda external color-blue" ><div class="icon f7-icons">social_twitter_fill</div><a href="https://twitter.com/home?status=Estoy%20usando%20la%20app%20para%20buscar%20centros%20de%20salud%20y%20turnos%20en%20San%20Juan.%20%23encontraSalud%20%23programaTuTurno">Compartilo en Twitter</a></div>
             <br>
         </div>
     </div>
