mejoras en vistas

--- a/SanJuanSaludAPP/www/ayudaCSProtur.html
+++ b/SanJuanSaludAPP/www/ayudaCSProtur.html
@@ -23,7 +23,7 @@
 
                 <p>PROTUR (sistema de turnos médicos programados) es un programa cuyo objetivo es agilizar el proceso para solicitar un turno en un centro de salud.</p>
                 <p>Es necesario destacar que al enviar una solicitud de contacto mediante ésta aplicación o por <a class="link-azul" href="http://salud.sanjuan.gob.ar"> la página web del Ministerio de Salud</a>, usted no pide un turno directamente, sino que <b>una persona se contacta con usted por mail o teléfono</b> para coordinar un turno en el horario y centro de salud mas adecuado para usted.</p>
-                <p>Si necesita turno para un especialista, debe de tener la derivación que le proporcionó su médico. Si no posee derivación, el PROTUR que se contacte con usted le dará un turno para el médico clínico mas conveniente según su ubicación.</p>
+                <p>Si necesita turno para un especialista, debe contar con la derivación de un profesional. Si no posee derivación, el PROTUR que se contacte con usted le dará un turno para el médico clínico mas conveniente según su ubicación.</p>
                 <p>El formulario tiene para llenar los siguientes campos:</p>
                 <p><b>Nombre y Apellido:</b>(obligatorio) Debe ingresar su nombre y apellido. No está permitido ingresar números acá.</p>
                 <p><b>Correo electrónico:</b> Para tener mas opciones de contacto es recomendable facilitar su dirección de casilla electrónica <i>( nombre@proveedor.com )</i></p>
