--- a/SanJuanSaludAPP/www/ayudaContacto.html
+++ b/SanJuanSaludAPP/www/ayudaContacto.html
@@ -23,8 +23,8 @@
 
                 <p>Ésta aplicación fue desarrollada por el <b>Área de informática del Ministerio de Salud de San Juan </b> en colaboración con la
                     <a class="link-azul" href="http://tramite.sanjuan.gov.ar/index.php/tramite/org/266">Dirección de Gobierno Electrónico</a> (organismo encargado de coordinar la informática en todos los ministerios) la
-                    <a class="link-azul" href="http://tramite.sanjuan.gov.ar/index.php/tramite/org/349">Dirección de Asistencia Social</a> (a cargo del programa PROTUR) y el
-                    <a class="link-azul" href="mailto:iiee_informes@sanjuan.gov.ar">Dirección de Estadística</a> (quien recopila los datos de los centros de salud). </p>
+                    <a class="link-azul" href="http://tramite.sanjuan.gov.ar/index.php/tramite/org/349">Dirección de Servicios Sociales</a> (a cargo del programa PROTUR) y la
+                    <a class="link-azul" href="mailto:iiee_informes@sanjuan.gov.ar">Dirección de Estadística</a>. </p>
                 <p>Cualquier duda o sugerencia, escríbanos:</p>
 
                 <div>
