arreglos en vistas

--- a/SanJuanSaludAPP/www/index.html
+++ b/SanJuanSaludAPP/www/index.html
@@ -14,6 +14,7 @@
         <!--CSS principal-->
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
+
         <title>SanJuanSaludAPP</title>
     </head>
     <body class="theme-white">
@@ -35,8 +36,6 @@
                     </div>
                     <!-- FIN Navigation Bar-->
 
-
-
                     <div class="page-content">
 
                         <div class="content-block">
@@ -49,15 +48,10 @@
                                         <!-- Slides wrapper -->
                                         <div id="slide" class="swiper-wrapper">
                                             <!--
-                                            Slides
-                                            <div class="swiper-slide">Slide 1</div>
-                                            <div class="swiper-slide">Slide 2</div>
-                                            <div class="swiper-slide">Slide 3</div>
+                                            contenido dinámico por js
                                             -->
                                         </div>
-
                                     </div>
-
                                 </div>
                             </div>
                                 <p class="buttons-row" >
@@ -81,20 +75,15 @@
                                 </div>
                             </div>
                         </div>
-
-                        <!--footer-->
-
-
                     </div>
                 </div>
             </div>
-
         </div>
+
+        <!--footer-->
         <div class="toolbar">
             <div class="toolbar-inner">
-                <p>
-                Ministerio de Salud Pública - San Juan Argentina
-                </p>
+                <p>Ministerio de Salud Pública - San Juan Argentina</p>
             </div>
         </div>
 
