--- a/SanJuanSaludAPP/www/ayudaContacto.html
+++ b/SanJuanSaludAPP/www/ayudaContacto.html
@@ -22,23 +22,41 @@
                 <h3>Envianos tu comentario</h3>
 
                 <p>Ésta aplicación fue desarrollada por el <b>Área de informática del Ministerio de Salud de San Juan </b> en colaboración con la
-                    <a class="link-azul" href="http://tramite.sanjuan.gov.ar/index.php/tramite/org/266">Dirección de Gobierno Electrónico</a> (organismo encargado de coordinar la informática en todos los ministerios) la
-                    <a class="link-azul" href="http://tramite.sanjuan.gov.ar/index.php/tramite/org/349">Dirección de Servicios Sociales</a> (a cargo del programa PROTUR) y la
-                    <a class="link-azul" href="mailto:iiee_informes@sanjuan.gov.ar">Dirección de Estadística</a>. </p>
-                <p>Cualquier duda o sugerencia, escríbanos:</p>
+                    <a class="link-azul" href="mailto:iiee_informes@sanjuan.gov.ar">Dirección de Estadística</a>, la
+                    <a class="link-azul" href="http://tramite.sanjuan.gov.ar/index.php/tramite/org/349">Dirección de Servicios Sociales</a> (a cargo del programa PROTUR), la
+                    <a class="link-azul" href="http://tramite.sanjuan.gov.ar/index.php/tramite/org/126">Dirección de Regulación y Control de Gestión y la
+                    <a class="link-azul" href="http://tramite.sanjuan.gov.ar/index.php/tramite/org/266">Dirección de Gobierno Electrónico</a>
 
-                <div>
-                    <i class="icon f7-icons  color-red">email_fill</i>
-                    <input id="cemail" type="email" placeholder="Correo electrónico">
-                </div>
-                    <textarea id="textareaComentario" maxlength="254" type="text" rows="5" placeholder="Escriba aquí su comentario"></textarea>
+                <p>Cualquier duda o sugerencia, podés dejarnos un comentario acá:</p>
+
+                <form class="list-block background-light">
+                    <div class="item-content">
+                        <div class="item-media"><i class="icon f7-icons color-red">email_fill</i></div>
+                        <div class="item-inner">
+
+                            <div class="item-input">
+                                <input id="cemail" type="text" placeholder="Correo electrónico">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item-content">
+                        <div class="item-inner">
+
+                            <div class="item-input">
+                                <textarea  id="textareaComentario" maxlength="254" type="text" rows="5" placeholder="Escriba aquí su comentario"></textarea>
+                            </div>
+                        </div>
+                    </div>
+
+                </form>
+
+
                 <div class="content block">
                     <a href="#" onclick="javascript:enviarComentario();" id="enviarComentario" class="button button-fill button-raised boton-chico">Enviar comentario</a>
                 </div>
 
-
-
-
+                <br><br>
 
             </div>
         </div>
