Clusterizado en maps

--- a/SanJuanSaludAPP/www/index.html
+++ b/SanJuanSaludAPP/www/index.html
@@ -110,6 +110,8 @@
     <script type = "text/javascript" src = "scripts/framework7.js"></script>
     <script type="text/javascript" src="jquery/jquery-3.2.1.min.js"></script>
     <!--JS usuario-->
+    <script type="text/javascript" src="scripts/markerclusterer.js"></script>
+
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZK0bGv6wCVNOpLiLRLgV_hy8B-Y07pp4"></script>
     <script type="text/javascript" src="scripts/func.js"></script>
     <script type="text/javascript" src="scripts/index.js"></script>
