link en botones redes sociales hay que probar como se comportan.

--- a/SanJuanSaludAPP/www/ayuda.html
+++ b/SanJuanSaludAPP/www/ayuda.html
@@ -28,12 +28,11 @@
             <br>
             <div class="linkAyuda" ><div class="icon f7-icons color-red">help_fill</div><a href="ayudaContacto.html">¿Preguntas o sugerencias?</a></div>
             <br>
-            <div class="linkAyuda  external color-indigo" ><div class="icon f7-icons">social_facebook_fill</div><a href="https://www.facebook.com/sharer/sharer.php?u=http%3A//salud.sanjuan.gob.ar/&quote='Estoy%20usando%20la%20app%20para%20buscar%20centros%20de%20salud%20y%20turnos%20en%20San%20Juan.%20%23encontraSalud%20%23programaTuTurno'" >Compartilo en Facebook</a></div>
+            <div class="linkAyuda  external color-indigo" ><div class="icon f7-icons">social_facebook_fill</div><a onclick="javascript:ShareOnFB();" >Compartilo en Facebook</a></div>
             <br>
-            <div class="linkAyuda external color-blue" ><div class="icon f7-icons">social_twitter_fill</div><a href="https://twitter.com/home?status=Estoy%20usando%20la%20app%20para%20buscar%20centros%20de%20salud%20y%20turnos%20en%20San%20Juan.%20%23encontraSalud%20%23programaTuTurno">Compartilo en Twitter</a></div>
+            <div class="linkAyuda external color-blue" ><div class="icon f7-icons">social_twitter_fill</div><a onclick="javascript:ShareOnTW();">Compartilo en Twitter</a></div>
             <br>
 
-            <a onclick='navigator.app.loadUrl("https://www.facebook.com/sharer/sharer.php?u=http%3A//salud.sanjuan.gob.ar/&quote=\"Estoy%20usando%20la%20app%20para%20buscar%20centros%20de%20salud%20y%20turnos%20en%20San%20Juan.%20%23encontraSalud%20%23programaTuTurno\", { openExternal:true });'>Link</a>
 
         </div>
     </div>
