--- a/SanJuanSaludAPP/www/ayuda.html
+++ b/SanJuanSaludAPP/www/ayuda.html
@@ -22,6 +22,8 @@
             <h3>Temas de ayuda</h3>
             <div class="linkAyuda" ><div class="icon f7-icons color-red">help_fill</div><a href="ayudaCSDispositivo.html" >Buscar centros de salud con tu dispositivo</a></div>
             <br>
+            <div class="linkAyuda" ><div class="icon f7-icons color-red">help_fill</div><a href="ayudaCSBuscar.html">Buscar centros de salud</a></div>
+            <br>
             <div class="linkAyuda" ><div class="icon f7-icons color-red">help_fill</div><a href="ayudaCSDepartamentos.html">Buscar centros de salud por departamento</a></div>
             <br>
             <div class="linkAyuda" ><div class="icon f7-icons color-red">help_fill</div><a href="ayudaCSProtur.html">Solicitar contacto con un PROTUR</a></div>
