--- a/SanJuanSaludAPP/www/buscar.html
+++ b/SanJuanSaludAPP/www/buscar.html
@@ -1,9 +1,23 @@
 <div data-page="buscar" class="page">
+
+    <div class="navbar">
+        <div class="navbar-inner navbarMenu">
+            <div class="left">
+                <a href="#" class="link back">
+                    <i class="icon icon-back"></i>
+                    <span>Volver</span>
+                </a>
+            </div>
+            <div class="right"><p></p></div>
+
+        </div>
+    </div>
     <!-- Search Bar -->
+
     <form data-search-list=".list-block-search" data-search-in=".item-title" class="searchbar searchbar-init">
         <div class="searchbar-input">
             <input type="search" placeholder="Buscar Centro de Salud"><a href="#" class="searchbar-clear"></a>
-        </div><a href="#" class="searchbar-cancel">Cancelar</a>
+        </div><a href="#" class="searchbar-cancel"></a>
     </form>
 
     <!-- Search Bar overlay -->
