agregando ayuda de la nueva funcionalidad de busqueda.

--- a/SanJuanSaludAPP/www/ayuda.html
+++ b/SanJuanSaludAPP/www/ayuda.html
@@ -20,15 +20,15 @@
         <div class="content-block">
 
             <h3>Temas de ayuda</h3>
-            <div class="linkAyuda" ><div class="icon f7-icons color-red">help_fill</div><a href="ayudaCSDispositivo.html" >Buscar centros de salud con tu dispositivo</a></div>
+            <div class="linkAyuda" ><div class="icon f7-icons color-red">help_fill</div><a href="ayudaCSDispositivo.html" >Centros de Salud Cercanos</a></div>
             <br>
-            <div class="linkAyuda" ><div class="icon f7-icons color-red">help_fill</div><a href="ayudaCSBuscar.html">Buscar centros de salud</a></div>
+            <div class="linkAyuda" ><div class="icon f7-icons color-red">help_fill</div><a href="ayudaCSBuscar.html">Buscar Centros de Salud</a></div>
             <br>
-            <div class="linkAyuda" ><div class="icon f7-icons color-red">help_fill</div><a href="ayudaCSDepartamentos.html">Buscar centros de salud por departamento</a></div>
+            <div class="linkAyuda" ><div class="icon f7-icons color-red">help_fill</div><a href="ayudaCSDepartamentos.html">Buscar Centros de Salud por Departamento</a></div>
             <br>
             <div class="linkAyuda" ><div class="icon f7-icons color-red">help_fill</div><a href="ayudaCSProtur.html">Solicitar contacto con un PROTUR</a></div>
             <br>
-            <div class="linkAyuda" ><div class="icon f7-icons color-red">help_fill</div><a href="ayudaContacto.html">¿Preguntas o sugerencias?</a></div>
+            <div class="linkAyuda" ><div class="icon f7-icons color-red">help_fill</div><a href="ayudaContacto.html">¿Preguntas o Sugerencias?</a></div>
             <br>
             <div class="linkAyuda  external color-indigo" ><div class="icon f7-icons">social_facebook_fill</div><a onclick="javascript:ShareOnFB();" >Compartilo en Facebook</a></div>
             <br>
