--- a/SanJuanSaludAPP/www/ayudaCSBuscar.html
+++ b/SanJuanSaludAPP/www/ayudaCSBuscar.html
@@ -23,7 +23,7 @@
 
                 <p>Si usted necesita ubicar un  <i>"Centro de Salud"</i> deberá:
                 <p>Escribir nombre o parte del nombre del centro de salud:</p>
-                <p>Luego podra hacer <b>Click</b> sobre el resultado mostrado y acceder al detalle completo.</p>
+                <p>Luego podra tocar <b>sobre</b> el resultado mostrado y acceder al detalle completo.</p>
                 <br>
                 <br>
             </div>
