--- a/SanJuanSaludAPP/www/ayudaCSDispositivo.html
+++ b/SanJuanSaludAPP/www/ayudaCSDispositivo.html
@@ -9,7 +9,7 @@
                     <span>Volver</span>
                 </a>
             </div>
-            <div class="right"><p>Buscar con tu dispositivo móvil</p></div>
+            <div class="right"><p>Centros de Salud Cercanos</p></div>
         </div>
     </div>
 
@@ -19,9 +19,9 @@
         <div class="page-content">
             <div class="content-block">
 
-                <h3>Buscar con tu dispositivo móvil </h3>
+                <h3>Centros de Salud Cercanos </h3>
 
-                <p>Cuando selecciona <i>"Buscar centros de salud con mi dispositivo móvil"</i> la aplicación busca su ubicación actual con su GPS (si está disponible y activado) y le muestra los centros de salud mas cercanos a donde se encuentre.</p>
+                <p>Cuando selecciona <i>"Centros de Salud Cercanos"</i> la aplicación busca su ubicación actual con su GPS (si está disponible y activado) y le muestra los centros de salud mas cercanos a donde se encuentre.</p>
                 <p>Si el dispositivo mostró un mensaje diciendo <i>"No se pudo encontrar su ubicación"</i> entonces la aplicación no pudo tomar la información de su GPS. Por favor, actívelo y reinicie la aplicación.</p>
                 <p>Si todo es correcto, el mapa mostrará su ubicación actual con un ícono naranja y una indicación que dice <i>"Ubicación actual"</i>. Los centros de salud se muestran con un pin rojo y una cruz.</p>
                 <p>Usted puede seleccionar estos pines (que representan los centros de salud) y se mostrará un cartel con el nombre del centro de salud y la opción de <i>"ver información detallada"</i>.</p>
