--- a/SanJuanSaludAPP/www/ayuda.html
+++ b/SanJuanSaludAPP/www/ayuda.html
@@ -22,7 +22,7 @@
             <h3>Temas de ayuda</h3>
             <div class="linkAyuda" ><div class="icon f7-icons color-red">help_fill</div><a href="ayudaCSDispositivo.html" >Centros de Salud Cercanos</a></div>
             <br>
-            <div class="linkAyuda" ><div class="icon f7-icons color-red">help_fill</div><a href="ayudaCSBuscar.html">Buscar Centros de Salud</a></div>
+            <div class="linkAyuda" ><div class="icon f7-icons color-red">help_fill</div><a href="ayudaCSBuscar.html">Buscar Centros de Salud por nombre</a></div>
             <br>
             <div class="linkAyuda" ><div class="icon f7-icons color-red">help_fill</div><a href="ayudaCSDepartamentos.html">Buscar Centros de Salud por Departamento</a></div>
             <br>
