boton y plugin de llamada al 107

--- a/SanJuanSaludAPP/www/index.html
+++ b/SanJuanSaludAPP/www/index.html
@@ -66,6 +66,18 @@
                                         <span><br>Solicitar <br>turno (PROTUR)<br> <br><img src="images/btnProtur.svg" alt=""></span>
                                     </a>
                                 </p>
+
+                                <p class="buttons-row" >
+                                    <!--Alerta infarto-->
+                                    <a href="#" id="btnAlerta" onclick="javascript:CallPhone('107');" data-ignore-cache="true"  class="button button-fill button-raised boton" >
+                                        <span><br>Código infarto<br><img src="images/images.jpg" alt=""></span>
+                                    </a>
+
+                                    <!--Atencion las 24hs-->
+                                    <a href="#" id="btnEmergencia" onclick="javascript:CallPhone('107');" data-ignore-cache="true" class="button button-fill button-raised boton">
+                                        <span><br>Emergencias 24hs<br><img src="images/emergencia.png"  alt=""></span>
+                                    </a>
+                                </p>
                             <div class="row">
                                 <div class="col-100 ">
                                     <!--Boton ayuda-->
