con íconos nuevos

--- a/SanJuanSaludAPP/www/index.html
+++ b/SanJuanSaludAPP/www/index.html
@@ -70,12 +70,12 @@
                                 <p class="buttons-row" >
                                     <!--Alerta infarto-->
                                     <a href="#" id="btnAlerta" onclick="javascript:CallPhone('107');" data-ignore-cache="true"  class="button button-fill button-raised boton" >
-                                        <span><br>Código infarto<br><img src="images/images.jpg" alt=""></span>
+                                        <span><br>Código infarto<br><br><img src="images/infarto.svg" alt=""></span>
                                     </a>
 
                                     <!--Atencion las 24hs-->
                                     <a href="#" id="btnEmergencia" onclick="javascript:CallPhone('107');" data-ignore-cache="true" class="button button-fill button-raised boton">
-                                        <span><br>Emergencias 24hs<br><img src="images/emergencia.png"  alt=""></span>
+                                        <span><br>Emergencias 24hs<br><br><img src="images/emergencias.svg"  alt=""></span>
                                     </a>
                                 </p>
                             <div class="row">
