--- a/SanJuanSaludAPP/www/index.html
+++ b/SanJuanSaludAPP/www/index.html
@@ -60,22 +60,28 @@
                                         
                                         <span><br>Centros <br>de Salud <br>  <br><img src="images/btnMap.svg" alt=""></span>
                                     </a>
-
+                                </p>
+                                <p class="buttons-row" >
                                     <!--Boton PROTUR-->
                                     <a href="#" id="btnProtur" data-ignore-cache="true" class="button button-fill button-raised boton">
                                         <span><br>Solicitar <br>turno (PROTUR)<br> <br><img src="images/btnProtur.svg" alt=""></span>
                                     </a>
-                                </p>
-
-                                <p class="buttons-row" >
                                     <!--Alerta infarto-->
                                     <a href="#" id="btnAlerta" onclick="javascript:CallPhone('107');" data-ignore-cache="true"  class="button button-fill button-raised boton" >
                                         <span><br>Código infarto<br><br><img src="images/infarto.svg" alt=""></span>
                                     </a>
+                                </p>
+
+                                <p class="buttons-row" >
 
                                     <!--Atencion las 24hs-->
                                     <a href="#" id="btnEmergencia" onclick="javascript:CallPhone('107');" data-ignore-cache="true" class="button button-fill button-raised boton">
                                         <span><br>Emergencias 24hs<br><br><img src="images/emergencias.svg"  alt=""></span>
+                                    </a>
+
+                                    <!--1000 días-->
+                                    <a href="#" id="btn1000dias"  data-ignore-cache="true" class="button button-fill button-raised boton">
+                                        <span><br>1000 días<br><br><img src="images/1000.svg"  alt=""></span>
                                     </a>
                                 </p>
                             <div class="row">
