boton y plugin de llamada al 107

--- a/SanJuanSaludAPP/www/formulario1000dias.html
+++ b/SanJuanSaludAPP/www/formulario1000dias.html
@@ -19,37 +19,57 @@
 
         <div class="content-block">
             <br>
+            <br>
+            <h3 class="uk-h2 uk-margin-top-remove">¿De qué se trata?</h3>
+
+
+            <div class="uk-margin">
+                <div class="videoWrapper">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/nnFlfzkyq7U" frameborder="0" allowfullscreen>
+
+                </iframe>
+                </div>
+                <p>
+                    Todos los niños son sensibles a la nutrición, estimulación y cuidados de salud, que reciben fundamentalmente en sus primeros 1000 días de vida, comenzando desde el momento de la concepción. Esta ventana crítica representa a su vez una oportunidad y un trascendente desafío para integrar y hacer más efectivas las políticas de salud con el propósito de mejorar el capital humano de nuestra sociedad.
+                </p>
+
+                <p>
+                    Es por eso que se crea la <strong>Iniciativa Mis Primeros 1000 días en San Juan</strong> como demostración de la presencia activa del Estado de San Juan, con el fin de acompañar el crecimiento de todos los niños, promoviendo la expresión de su pleno potencial y por consiguiente el desarrollo de la sociedad en su conjunto.
+                </p>
+
+                <p>
+                    No se trata de la aplicación de estrategias de abordaje aisladas, sino de llevar a escala provincial un conjunto de intervenciones desde una mirada de interesectorialidad y de esta manera, promover junto con los equipos de salud, actitudes, apititudes y hábitos en las familias y en la comunidad.
+                </p>
+
+                <p>
+                    <strong>Objetivo</strong>: es prevenir los problemas de salud que hoy afectan a las madres y sus hijos, que influyen en su pleno crecimiento y desempeño futuro, priorizando el rol protagónico que debemos asumir como sociedad siendo la base protectora de nuestras embarazadas y niños.
+                </p>
+
+        </div>
+
+        <div class="content-block">
+            <br>
+            <h3>Si cumples con los requisitos puedes unirte al programa proporcionando los siguientes datos.</h3>
             <form class="list-block background-light" id="1000diasForm" name="1000diasForm">
 
-
-
                             <div class="item-content">
-                                <div class="item-title label">Periodo</div>
+                                <div class="item-title label">Etapa</div>
                                 <div class="item-inner">
                                     <div class="item-input">
-                                        <select id="periodo">
-                                                <option value="1">MAMA</option>
-                                                <option value="2">BEBE</option>
+                                        <select id="etapa" onchange="javascript:opcionEtapa(this);">
+                                                <option value="0">SELECCIONE...</option>
+                                                <option value="1">ESTOY EMBARAZADA</option>
+                                                <option value="2">MI BEBE YA NACIÓ</option>
                                         </select>
                                     </div>
                                 </div>
                             </div>
 
                             <div class="item-content">
-                                <div class="item-title label">MES</div>
+                                <div class="item-title label">Meses</div>
                                 <div class="item-inner">
                                     <div class="item-input">
-                                        <select id="mes">
-                                            <option value="0">0</option>
-                                            <option value="1">1</option>
-                                            <option value="2">2</option>
-                                            <option value="3">3</option>
-                                            <option value="4">4</option>
-                                            <option value="5">5</option>
-                                            <option value="6">6</option>
-                                            <option value="7">7</option>
-                                            <option value="8">8</option>
-                                            <option value="9">9</option>
+                                        <select id="mes" name="mes">
                                         </select>
                                     </div>
                                 </div>
@@ -67,13 +87,21 @@
             </form>
 
             <div class="content block">
-                <a href="#" onclick="javascript:validacion1000dias();" id="enviarFormulario1000dias" class="button button-fill button-raised boton-chico form-to-data">Enviar SMS </a>
+                <a href="#" onclick="javascript:validacion1000dias();" id="enviarFormulario1000dias" class="button button-fill button-raised boton-chico form-to-data">ALTA</a>
+            </div>
+
+            <br>
+            <h2>Darte de baja del programa 1000 Dias.</h2>
+            <p>Recuerda que puedes darte de baja del programa desde la siguiente opción.</p>
+            <div class="content block">
+                <a href="#" onclick="javascript:baja1000dias();" id="enviarFormulario1000dias" class="button button-fill button-raised boton-chico form-to-data">BAJA </a>
             </div>
 
             <br>
             <br>
 
         </div>
+
     </div>
 </div>
 
