Modificaciones se cambio ajax por base de datos..

--- a/SanJuanSaludAPP/www/buscar.html
+++ b/SanJuanSaludAPP/www/buscar.html
@@ -14,36 +14,19 @@
     </div>
     <!-- Search Bar -->
 
-    <form data-search-list=".list-block-search" data-search-in=".item-title" class="searchbar searchbar-init">
-        <div class="searchbar-input">
-            <input type="search" placeholder="Buscar Centro de Salud"><a href="#" class="searchbar-clear"></a>
-        </div><a href="#" class="searchbar-cancel"></a>
-    </form>
 
-    <!-- Search Bar overlay -->
-    <div class="searchbar-overlay"></div>
 
     <div class="page-content">
-        <!-- This block will be displayed if nothing found -->
-        <div class="content-block searchbar-not-found">
-            <div class="content-block-inner">No hay resultados de búsqueda.</div>
-        </div>
+        <div class="content-block">
+            <br>
 
-        <!-- This block will be displayed if anything found, and this list block is used a searbar target -->
-        <div class="list-block list-block-search searchbar-found">
-            <ul id="csDatalist">
-                <!--<li class="item-content">
-                    <div class="item-inner">
-                        <div class="item-title">Acura </div>
-                    </div>
-                </li>
-                <li class="item-content">
-                    <div class="item-inner">
-                        <div class="item-title">Audi</div>
-                    </div>
-                </li>-->
+            <div class="list-block " id="caps-container">
 
-            </ul>
+                <ul id="csDatalist">
+                </ul>
+            </div>
+
         </div>
     </div>
 </div>
+
