--- a/SanJuanSaludAPP/www/buscar.html
+++ b/SanJuanSaludAPP/www/buscar.html
@@ -8,7 +8,7 @@
                     <span>Volver</span>
                 </a>
             </div>
-            <div class="right"><p></p></div>
+            <div class="right"><p>Ingrese el CAPS a buscar</p></div>
 
         </div>
     </div>
@@ -21,6 +21,8 @@
             <br>
 
             <div class="list-block " id="caps-container">
+
+                    <input type="text" placeholder="Centro de Salud a Buscar" onchange="javascript:csBuscarListDB(this.value);">
 
                 <ul id="csDatalist">
                 </ul>
