Formulario de datos personales.

--- a/SanJuanSaludAPP/www/buscar.html
+++ b/SanJuanSaludAPP/www/buscar.html
@@ -22,13 +22,27 @@
 
             <div class="list-block " id="caps-container">
 
-                    <input type="text" placeholder="Centro de Salud a Buscar" onchange="javascript:csBuscarListDB(this.value);">
-
-                <ul id="csDatalist">
-                </ul>
+                <div class="item-content">
+                    <div class="item-media"><i class="icon f7-icons  color-red">search_strong</i></div>
+                    <div class="item-inner">
+                        <div class="item-input">
+                            <input type="text" placeholder="Centro de Salud a Buscar" onchange="javascript:csBuscarListDB(this.value);">
+                        </div>
+                    </div>
+                </div>
             </div>
 
+            <ul id="csDatalist">
+            </ul>
+
         </div>
+
+
+
     </div>
+
+
+
+
 </div>
 
