Formulario de datos personales.

--- a/SanJuanSaludAPP/www/datosPersonales.html
+++ b/SanJuanSaludAPP/www/datosPersonales.html
@@ -53,7 +53,9 @@
             </form>
 
             <div class="content block">
-                <a href="#" onclick="javascript:enviarFormularioDP();" id="enviarFormularioDP" class="button button-fill button-raised boton-chico form-to-data">Guardar </a>
+                <a href="#" onclick="javascript:enviarFormularioDP(0);" id="enviarFormularioDP" class="button button-fill button-raised boton-chico form-to-data">Guardar </a>
+                <br>
+                <a href="#" onclick="javascript:enviarFormularioDP(1);" id="enviarFormularioDP" class="button button-fill button-raised boton-chico form-to-data">Omitir </a>
             </div>
 
             <br>
