Servicio de Carta médica.

--- a/SanJuanSaludAPP/www/index.html
+++ b/SanJuanSaludAPP/www/index.html
@@ -61,6 +61,7 @@
                                         <span><br>Centros de Salud <br>  <br><img src="images/btnMap.svg" alt=""></span>
                                     </a>
                                 </p>
+
                                 <p class="buttons-row" >
                                     <!--Boton PROTUR-->
                                     <a href="#" id="btnProtur" data-ignore-cache="true" class="button button-fill button-raised boton">
@@ -84,6 +85,14 @@
                                         <span><br>1000 días<br><br><img src="images/1000.svg"  alt=""></span>
                                     </a>
                                 </p>
+
+                            <p class="buttons-row" >
+                                <!--Boton centros de salud-->
+                                <a href="#" id="btnCartaMedica" data-ignore-cache="true"  class="button button-fill button-raised boton" >
+
+                                    <span><br>Carta médica <br>  <br><img src="images/btnMap.svg" alt=""></span>
+                                </a>
+                            </p>
                             <div class="row">
                                 <div class="col-100 ">
                                     <!--Boton ayuda-->
