Servicio de Carta médica. reordenamiento de botones, doble tap para abrir noticia. solucion problema busqueda.

--- a/SanJuanSaludAPP/www/buscar.html
+++ b/SanJuanSaludAPP/www/buscar.html
@@ -26,7 +26,7 @@
                     <div class="item-media"><i class="icon f7-icons  color-red">search_strong</i> </div>
                     <div class="item-inner">
                         <div class="item-input">
-                            <input type="text" placeholder="Centro de Salud a Buscar" onkeydown="javascript:csBuscarListDB(this.value);">
+                            <input type="text" id="txt_buscar" name="txt_buscar"  placeholder="Centro de Salud a Buscar"  onkeyup="javascript:csBuscarListDB(this.value);">
                         </div>
                     </div>
                 </div>
