--- a/SanJuanSaludAPP/www/cartaMedica.html
+++ b/SanJuanSaludAPP/www/cartaMedica.html
@@ -17,7 +17,8 @@
         <div class="content-block">
             <br>
             <br>
-            <iframe frameborder="0" frameborder="0" style="overflow:hidden;overflow-x:hidden;overflow-y:hidden;height:100%;width:100%;position:absolute;top:10vh;left:0px;right:0px;bottom:0px" height="100%" width="100%" src="http://gedoc.sanjuan.gob.ar/GeDoc/DCRM/SolicitudDeCartaMedica"></iframe>
+            <iframe id="iframe" frameborder="0" frameborder="0" style="display:none;overflow:hidden;overflow-x:hidden;overflow-y:hidden;height:100%;width:100%;position:absolute;top:10vh;left:0px;right:0px;bottom:0px" height="100%" width="100%" src="http://gedoc.sanjuan.gob.ar/GeDoc/DCRM/SolicitudDeCartaMedica"></iframe>
+            <div class="loading" style="width:600px;height:300px;">Espere...</div>
         </div>
     </div>
 </div>
