con texto de ayuda para 1000 dias

--- a/SanJuanSaludAPP/www/ayuda.html
+++ b/SanJuanSaludAPP/www/ayuda.html
@@ -20,7 +20,7 @@
         <div class="content-block">
 
             <h3>Temas de ayuda</h3>
-            <div class="linkAyuda" ><div class="icon f7-icons color-red">help_fill</div><a href="ayudaCSDispositivo.html" >Centros de Salud Cercanos</a></div>
+            <div class="linkAyuda" ><div class="icon f7-icons color-red">help_fill</div><a href="ayudaCSDispositivo.html" >Centros de salud cercanos (A tu posición actual)</a></div>
             <br>
             <div class="linkAyuda" ><div class="icon f7-icons color-red">help_fill</div><a href="ayudaCSBuscar.html">Buscar Centros de Salud por nombre</a></div>
             <br>
@@ -30,10 +30,15 @@
             <br>
             <div class="linkAyuda" ><div class="icon f7-icons color-red">help_fill</div><a href="ayudaContacto.html">¿Preguntas o Sugerencias?</a></div>
             <br>
+            <div class="linkAyuda" ><div class="icon f7-icons color-red">help_fill</div><a href="ayuda1000dias.html">1000 días</a></div>
+            <br>
+            <div class="linkAyuda" ><div class="icon f7-icons color-red">help_fill</div><a href="ayudaCartaMedica.html">Carta médica</a></div>
+            <br>
             <div class="linkAyuda  external color-indigo" ><div class="icon f7-icons">social_facebook_fill</div><a onclick="javascript:ShareOnFB();" >Compartilo en Facebook</a></div>
             <br>
             <div class="linkAyuda external color-blue" ><div class="icon f7-icons">social_twitter_fill</div><a onclick="javascript:ShareOnTW();">Compartilo en Twitter</a></div>
             <br>
+
 
 
         </div>
