--- a/SanJuanSaludAPP/www/ayudaCSDispositivo.html
+++ b/SanJuanSaludAPP/www/ayudaCSDispositivo.html
@@ -19,7 +19,7 @@
         <div class="page-content">
             <div class="content-block">
 
-                <h3>Centros de Salud Cercanos </h3>
+                <h3>Centros de Salud Cercanos (A tu posición actual) </h3>
 
                 <p>Cuando selecciona <i>"Centros de Salud Cercanos"</i> la aplicación busca su ubicación actual con su GPS (si está disponible y activado) y le muestra los centros de salud mas cercanos a donde se encuentre.</p>
                 <p>Si el dispositivo mostró un mensaje diciendo <i>"No se pudo encontrar su ubicación"</i> entonces la aplicación no pudo tomar la información de su GPS. Por favor, actívelo y reinicie la aplicación.</p>
